dabjeongneo/src/main/kotlin/com/example/studykotlin/global/error/DabjeongneoException.kt
package com.example.studykotlin.global.error

open class DabjeongneoException(val errorCode : ErrorCode): RuntimeException() {

}